--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "NODE_ENV=production node ./lib/index.js",
     "dev": "NODE_ENV=development ts-node-dev --rs --respawn ./src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "postinstall": "build"
   },
   "dependencies": {
     "axios": "^0.27.2",
